# ml

./: .gitignore  README.md  arch.cu  backprop.md  build.sh  determine_arch.cu  device_ptr.cu  device_ptr.h  device_slice.cpp  device_slice.h  dual_slice.cu  dual_slice.h  host_ptr.cpp  host_ptr.h  host_slice.cpp  host_slice.h  kernel_types.h  kernels.cu  kernels.h  layer.cpp  layer.h  lazy_alloc.cu  main.cpp  main.cu  matrix.cpp  matrix.cu  matrix.h  meson.build  nn.cpp  nn.cu  nn.h  old_kernels.cu  old_kernels.h  old_lazy_alloc.cu  old_lazy_alloc.h  old_matrix.cpp  old_matrix.h  old_nn.cpp  old_nn.h  ptr.cpp  (+7 more)
.github/workflows/: ci.yaml
